--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,45 +1,29 @@
-html, body {
-    padding: 0;
-    margin: 0;
+*{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
-
-.logo
-{
-width: 100px;
-height: auto;
-padding-bottom: 20px;
+nav, .menu {
+    padding: 0px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    height:0;
+    gap: 2em;
 }
-
-h2 { 
-font-size: large;
-margin-top: 0;
+.menu li {
+  list-style-type: none; 
 }
-
-p {
-   line-height: 0em; /* la hauteur de la ligne est nulle par rapport à la hauteur du texte*/
-}
-
-/*nav  */
-.nav-links {
-    position: absolute;
-    right: 0;
-    top: 0;
-    list-style-type: none;
-}
-li{
-float: left;
-}
-
-li a{
-   display: block;
-    text-decoration:none;
+.menu a{
+    width: 120px; 
+    text-align: center;
+    text-decoration: none;
     color: black;
-    padding: 30px 30px;
-    
 }
-.menuSpecial{
-
-    font-weight: bold;
-    color: #0065fc;
+.navbar .button a{
+    text-decoration: none;
+    font-weight: bold; /*mettre en gras*/
+    color: #0065FC;
+    padding: 15px 20px;
 }
