--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,13 +4,16 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
-nav, .menu {
-    padding: 0px;
+.logo{
+    padding-left: 0px;
+}
+nav, .menu, .button{
+    padding: 5px;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    height:0;
-    gap: 2em;
+    height: 7px;
+    gap: 3em;
 }
 .menu li {
   list-style-type: none; 
@@ -19,11 +22,19 @@ nav, .menu {
     width: 120px; 
     text-align: center;
     text-decoration: none;
+    font-weight: bold;
     color: black;
 }
 .navbar .button a{
     text-decoration: none;
     font-weight: bold; /*mettre en gras*/
     color: #0065FC;
-    padding: 15px 20px;
 }
+h2 { 
+    font-size: large;
+    line-height: 1em;
+    }
+    
+    p {
+       line-height: 1em; /* la hauteur de la ligne est nulle par rapport à la hauteur du texte*/
+    }
