--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,8 @@
-html, body{
-    padding: 0px;
+body{
+    padding: 20px;
     margin: 2px;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 /*NAV*/
@@ -10,29 +10,23 @@ html, body{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-}
-.logo{
-    margin-top: 20px;
+    align-items: center;
+    height: 100px;
 }
 .menu li{
     display: inline;
-    justify-content: space-between;
-    margin-top: 20px;
+   padding: 25px;
 }
 .menu li a{
     text-decoration: none;
-    margin: 50px;
-    padding-top: 20px;
-}
-.menu{
-    margin-top: 20px;
+    padding: 35px 10px 0px 10px; 
 }
 li{
-    list-style-type: none;
+    list-style-type: none;   
 }
 a.active{
     color:#0065FC ;
-    border-top: medium solid #0065FC;
+    border-top:2.5px solid #0065FC;
 }
 .list{
     color: black;
@@ -56,56 +50,80 @@ a.active{
     justify-content:left;
     align-items: center;
 }
-.map, .searchtext, .search{
-    padding: 10px;
-}
 .map{
-    background-color: rgb(230, 221, 221);
-    border-bottom-left-radius: 8px;
-    border-top-left-radius: 8px;
+    background-color:#dbdbdb;
+    padding: 10px;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
 }
 .search{
     background-color: #0065FC;
+    border-top-right-radius: 12px;
+    border-bottom-right-radius: 12px;
     color: white;
-    border-bottom-right-radius: 8px;
-    border-top-right-radius: 8px;
+    padding: 12px;
+    font-size: small;
 }
 .searchtext{
+    border-left: none;
+    border-right: none;
+    border: 0.5px solid #dbdbdb;
+    padding: 11px;
+    
+}
+.searchtext::placeholder{
     color: black;
     font-weight: bold;
+    font-size:medium;
 }
 
 /* FILTRES NAVLIST*/
 .navlist{
     display: flex;
-    justify-content: left;
     align-items: center;
-    
 }
 .navlist p{
     font-weight: bold;
     margin: 0;
-  
 }
-.icon-list ul{
-    margin:0px
-}
-.icon-list li{
-    display: inline;
+.list-filtre {
+    display: flex;
+    flex-wrap: wrap;
     padding: 10px;
     font-weight: bold;
     margin: 0;
- 
 }
-li i{
-    padding: 8px;
-    color: #0065FC;
-    background-color: #DEEBFF ;
-}
-.icon-list i.fas{
-    display:inline-block;
+.list-filtre i{
+    display:flex;
     border-radius: 60px;
-    box-shadow: 0px 0px 2px #DEEBFF ;
+}
+.text-filtre{
+    margin-left: 10px;
+}
+.filtre{
+    display: flex;
+    align-items: center;
+    height: 40px;
+    padding-right: 10px;
+    margin-left: 20px;
+    border: 2px solid #e2e0e0;
+    border-radius: 60px;
+}
+.filtre i{
+    border: 12px solid #DEEBFF;
+    background-color: #DEEBFF;
+    color: #0065FC;
+}
+
+.filtre:hover {
+    background-color: #DEEBFF;
+}
+
+  /* RAPPEL INFO*/
+
+.rappel .info{
+    display: flex;
+    margin: 10px; 
 }
 .rappel{
     display: flex;
@@ -113,14 +131,82 @@ li i{
     align-items: center;
     font-size: small;
 }
-.rappel p{
-    display:inline;
+.rappel span{
     margin: 10px;
 }
-p i.fas{
-    font-size: small;
-    padding: 8px;
-    display:inline-block;
-    border-radius: 90px;
-    box-shadow: 0px 0px 2px black; 
+.info i{
+    padding:6px;
+    color: #0065FC;
+    border-radius: 12px;
+    border: 1px solid ; 
+}
+/*SECTION*/
+
+.nav-hebergements{
+    display: flex;
+    flex-direction: column;
+    background-color: #e2e0e0;
+    width: 65%;
+    border-radius: 25px;
+    padding: 0 20px;
+   
+}
+.grid_container_hebergements{
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: auto auto auto;   
+}
+.grid_hebergements{
+    background-color:white;
+    border: 0.5px solid white;
+    border-radius: 20px;
+    padding: 5px;  
+    
+}
+
+.texte-hebergement a{
+    text-decoration: none;
+    color: black;
+   
+}
+.title_hebergements{
+    padding-left: 30px;
+}
+.image-hebergement img{
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    width:100%; 
+    height:120px;
+    object-fit: cover;
+
+}  
+
+.grid_hebergements h2{
+    font-size:small;
+    margin: 5px 0px 5px 0px;
+    padding-left: 5px;
+}
+
+.grid_hebergements p{
+    font-size: x-small;
+    padding-left: 5px;
+    margin: 5px 0px 5px 0px;
+}
+.rating{
+    padding-left: 5px;
+    margin: 0;
+}
+
+/*Par défaut, une étoile est en gris,
+   avec un padding et un curseur en forme de main. */
+
+.fa-star {
+       color: #e2e0e0;
+}
+/* Si elle porte en plus la classe '.blue', elle sera en jaune. */
+.fa-star.blue {
+	color: #0065fc;
+}
+.rating{
+    font-size: xx-small;
 }
