--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,212 +1,325 @@
-body{
-    padding: 20px;
-    margin: 2px;
-    box-sizing: border-box;
-    font-family: 'Raleway', sans-serif;
+body {
+  padding: 20px;
+  margin: 2px;
+  box-sizing: border-box;
+  font-family: "Raleway", sans-serif;
 }
 
 /*NAV*/
-.navbar{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 100px;
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
 }
-.menu li{
-    display: inline;
-   padding: 25px;
+.menu li {
+  display: inline;
+  padding: 25px;
 }
-.menu li a{
-    text-decoration: none;
-    padding: 35px 10px 0px 10px; 
+.menu li a {
+  text-decoration: none;
+  padding: 35px 10px 0px 10px;
 }
-li{
-    list-style-type: none;   
+li {
+  list-style-type: none;
 }
-a.active{
-    color:#0065FC ;
-    border-top:2.5px solid #0065FC;
+a.active {
+  color: #0065fc;
+  border-top: 2.5px solid #0065fc;
 }
-.list{
-    color: black;
+.list {
+  color: black;
 }
-.login{
-    color: #0065FC;
-    font-weight: bold;
+.login {
+  color: #0065fc;
+  font-weight: bold;
 }
 
-/*Header*/
+/*HEADER*/
 .title h2 {
-    margin:0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
-.title p{
-    margin:0;
-    padding: 0;
+.title p {
+  margin: 0;
+  padding: 0;
 }
-.searchbar{
-    display: flex;
-    justify-content:left;
-    align-items: center;
+.searchbar {
+  display: flex;
+  justify-content: left;
+  align-items: center;
 }
-.map{
-    background-color:#dbdbdb;
-    padding: 10px;
-    border-top-left-radius: 12px;
-    border-bottom-left-radius: 12px;
+.map {
+  background-color: #dbdbdb;
+  padding: 10px;
+  border-top-left-radius: 12px;
+  border-bottom-left-radius: 12px;
 }
-.search{
-    background-color: #0065FC;
-    border-top-right-radius: 12px;
-    border-bottom-right-radius: 12px;
-    color: white;
-    padding: 12px;
-    font-size: small;
+.search {
+  background-color: #0065fc;
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
+  color: white;
+  padding: 12px;
+  font-size: small;
 }
-.searchtext{
-    border-left: none;
-    border-right: none;
-    border: 0.5px solid #dbdbdb;
-    padding: 11px;
-    
+.searchtext {
+  border-left: none;
+  border-right: none;
+  border: 0.5px solid #dbdbdb;
+  padding: 11px;
 }
-.searchtext::placeholder{
-    color: black;
-    font-weight: bold;
-    font-size:medium;
+.searchtext::placeholder {
+  color: black;
+  font-weight: bold;
+  font-size: medium;
 }
+/* MAIN*/
+/*HEADER*/
 
-/* FILTRES NAVLIST*/
-.navlist{
-    display: flex;
-    align-items: center;
+.navlist {
+  display: flex;
+  align-items: center;
 }
-.navlist p{
-    font-weight: bold;
-    margin: 0;
+.navlist p {
+  font-weight: bold;
+  margin: 0;
 }
 .list-filtre {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 10px;
-    font-weight: bold;
-    margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  font-weight: bold;
+  margin: 0;
 }
-.list-filtre i{
-    display:flex;
-    border-radius: 60px;
+.list-filtre i {
+  display: flex;
+  border-radius: 60px;
 }
-.text-filtre{
-    margin-left: 10px;
+.text-filtre {
+  margin-left: 10px;
 }
-.filtre{
-    display: flex;
-    align-items: center;
-    height: 40px;
-    padding-right: 10px;
-    margin-left: 20px;
-    border: 2px solid #e2e0e0;
-    border-radius: 60px;
+.filtre {
+  display: flex;
+  align-items: center;
+  height: 40px;
+  padding-right: 10px;
+  margin-left: 20px;
+  border: 2px solid #e2e0e0;
+  border-radius: 60px;
 }
-.filtre i{
-    border: 12px solid #DEEBFF;
-    background-color: #DEEBFF;
-    color: #0065FC;
+.filtre i {
+  border: 12px solid #deebff;
+  background-color: #deebff;
+  color: #0065fc;
 }
 
 .filtre:hover {
-    background-color: #DEEBFF;
+  background-color: #deebff;
 }
 
-  /* RAPPEL INFO*/
+/* RAPPEL INFO*/
 
-.rappel .info{
-    display: flex;
-    margin: 10px; 
+.rappel .info {
+  display: flex;
+  margin: 10px;
 }
-.rappel{
-    display: flex;
-    justify-content:left;
-    align-items: center;
-    font-size: small;
+.rappel {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  font-size: small;
 }
-.rappel span{
-    margin: 10px;
+.rappel span {
+  margin: 10px;
 }
-.info i{
-    padding:6px;
-    color: #0065FC;
-    border-radius: 12px;
-    border: 1px solid ; 
+.info i {
+  padding: 6px;
+  color: #0065fc;
+  border-radius: 12px;
+  border: 1px solid;
 }
+
+/*MAIN*/
+
 /*SECTION*/
-
-.nav-hebergements{
-    display: flex;
-    flex-direction: column;
-    background-color: #e2e0e0;
-    width: 65%;
-    border-radius: 25px;
-    padding: 0 20px;
-   
+.hebergements {
+  width: 65%;
 }
-.grid_container_hebergements{
-    display: grid;
-    grid-gap: 30px;
-    grid-template-columns: auto auto auto;   
+.nav_hebergements {
+  display: flex;
+  flex-direction: column;
+  background-color: #e2e0e0;
+  border-radius: 25px;
+  padding: 0 20px;
 }
-.grid_hebergements{
-    background-color:white;
-    border: 0.5px solid white;
-    border-radius: 20px;
-    padding: 5px;  
-    
+.grid_container_hebergements {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-columns: auto auto auto;
 }
-
-.texte-hebergement a{
-    text-decoration: none;
-    color: black;
-   
+.grid_hebergements {
+  background-color: white;
+  border: 0.5px solid white;
+  border-radius: 20px;
+  padding: 5px;
 }
-.title_hebergements{
-    padding-left: 30px;
-}
-.image-hebergement img{
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    width:100%; 
-    height:120px;
-    object-fit: cover;
-
-}  
-
-.grid_hebergements h2{
-    font-size:small;
-    margin: 5px 0px 5px 0px;
-    padding-left: 5px;
+.texte_hebergements a {
+  text-decoration: none;
+  color: black;
 }
 
-.grid_hebergements p{
-    font-size: x-small;
-    padding-left: 5px;
-    margin: 5px 0px 5px 0px;
-}
-.rating{
-    padding-left: 5px;
-    margin: 0;
+.image_hebergements img {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  width: 100%;
+  height: 120px;
+  object-fit: cover;
 }
 
-/*Par défaut, une étoile est en gris,
-   avec un padding et un curseur en forme de main. */
+.grid_hebergements h2 {
+  font-size: small;
+  margin: 5px 0px 5px 0px;
+  padding-left: 5px;
+}
+
+.grid_hebergements p {
+  font-size: x-small;
+  padding-left: 5px;
+  margin: 5px 0px 5px 0px;
+}
+.rating {
+  padding-left: 5px;
+  margin: 0;
+}
+
+/* couleur étoiles */
 
 .fa-star {
-       color: #e2e0e0;
+  color: #e2e0e0;
 }
 /* Si elle porte en plus la classe '.blue', elle sera en jaune. */
 .fa-star.blue {
-	color: #0065fc;
+  color: #0065fc;
 }
-.rating{
-    font-size: xx-small;
+/* couleur étoiles*/
+.rating {
+  font-size: xx-small;
+}
+
+/*ASIDE*/
+
+aside {
+  width: 30%;
+}
+
+.title_les_plus_populaires {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.chart-line i {
+  font-size: x-large;
+}
+.nav_populaires {
+  background-color: #e2e0e0;
+  border-radius: 25px;
+  padding: 0 30px 30px 30px;
+}
+.grid_container_populaires {
+  display: grid;
+  row-gap: 26px;
+}
+.grid_populaires {
+  display: grid;
+  grid-template-columns: 120px 1fr;
+  background-color: white;
+  border-radius: 20px;
+}
+.texte_populaires a {
+  text-decoration: none;
+  color: black;
+  padding-top: 20px;
+}
+.image_populaires img {
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  width: 100%;
+  height: 120px;
+  padding: 3px;
+  object-fit: cover;
+}
+.texte_populaires {
+  padding-left: 20px;
+}
+.grid_populaires h2 {
+  font-size: small;
+}
+
+.grid_populaires p {
+  font-size: x-small;
+}
+.texte_populaires a .rating {
+  padding-top: 25px;
+}
+
+/*activites*/
+
+.grid_container_activites {
+
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 15% 15% 7.5% 7.5% 15% 15%;
+  grid-template-areas: 
+  "zone1 zone2 zone4 zone5"
+  "zone1 zone2 zone4 zone5"
+  "zone1 zone2 zone4 ."
+  "zone1 . zone4 zone6"
+  "zone1 zone3 zone4 zone6"
+  "zone1 zone3 zone4 zone6"
+  ;
+  grid-gap: 30px;
+  border: 2px solid red;
+}
+.grid_activites_1{
+  grid-area: zone1;
+  justify-items: start;
+  object-fit: cover;
+  
+}
+.grid_activites_2{
+  grid-area: zone2;
+  justify-items: start;
+  object-fit: cover;
+}
+.grid_activites_3{
+  grid-area: zone3;
+  justify-items: end;
+  object-fit: cover;
+}
+.grid_activites_4{
+  grid-area: zone4;
+  justify-items: start;
+  object-fit: cover;
+}
+.grid_activites_5{
+grid-area: zone5;
+justify-items: start;
+object-fit: cover;
+}
+.grid_activites_6{
+ grid-area: zone6;
+ justify-items: end;
+ object-fit: cover;
+}
+
+
+
+/*FOOTER*/
+footer{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  background-color: #f1eeee;
 }
