--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -141,11 +141,12 @@ a.active {
   border: 1px solid;
 }
 
-/*MAIN*/
+
 
 /*SECTION*/
-.hebergements {
-  width: 65%;
+.blocs{
+  display: flex;
+ justify-content: space-between;
 }
 .nav_hebergements {
   display: flex;
@@ -153,6 +154,8 @@ a.active {
   background-color: #e2e0e0;
   border-radius: 25px;
   padding: 0 20px;
+  width: 60%;
+  
 }
 .grid_container_hebergements {
   display: grid;
@@ -210,116 +213,117 @@ a.active {
 
 /*ASIDE*/
 
-aside {
-  width: 30%;
-}
-
 .title_les_plus_populaires {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.chart-line i {
-  font-size: x-large;
-}
 .nav_populaires {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.1fr 1fr;
   background-color: #e2e0e0;
   border-radius: 25px;
-  padding: 0 30px 30px 30px;
+  padding: 0 20px;
+  width: 30%;
+  
 }
-.grid_container_populaires {
-  display: grid;
-  row-gap: 26px;
+.grid_container_populaires{
+  display: flex;
+  flex-direction: column;
+  row-gap: 15px;
+  
+
 }
 .grid_populaires {
-  display: grid;
-  grid-template-columns: 120px 1fr;
+  display: flex;
   background-color: white;
-  border-radius: 20px;
+  border-radius: 15px;
+  border: 5px solid white
+}
+
+.image_populaires img{
+  display: flex;
+  width: 200px;
+  height: 130px;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  object-fit: cover;
+ 
 }
 .texte_populaires a {
   text-decoration: none;
   color: black;
-  padding-top: 20px;
+  width: 30%;
 }
-.image_populaires img {
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-  width: 100%;
-  height: 120px;
-  padding: 3px;
-  object-fit: cover;
-}
-.texte_populaires {
-  padding-left: 20px;
-}
+
+
 .grid_populaires h2 {
   font-size: small;
+  margin: 5px 0px 5px 0px;
+  padding-left: 5px;
 }
 
 .grid_populaires p {
   font-size: x-small;
+  padding-left: 5px;
+  margin: 5px 0px 5px 0px;
 }
-.texte_populaires a .rating {
-  padding-top: 25px;
+.texte_populaires .rating {
+  padding:55px 5px 0 5px;
+  margin: 0;
 }
 
-/*activites*/
+/* couleur étoiles */
 
+.fa-star {
+  color: #e2e0e0;
+}
+/* Si elle porte en plus la classe '.blue', elle sera en jaune. */
+.fa-star.blue {
+  color: #0065fc;
+}
+/* couleur étoiles*/
+.rating {
+  font-size: xx-small;
+}
+
+/*section activites*/
+
+.activites{
+  display: flex;
+}
 .grid_container_activites {
-
+  position:relative;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 15% 15% 7.5% 7.5% 15% 15%;
-  grid-template-areas: 
-  "zone1 zone2 zone4 zone5"
-  "zone1 zone2 zone4 zone5"
-  "zone1 zone2 zone4 ."
-  "zone1 . zone4 zone6"
-  "zone1 zone3 zone4 zone6"
-  "zone1 zone3 zone4 zone6"
-  ;
+  grid-template-rows: repeat(2, minmax(100px, 1fr));
+  height: 550px;
+  margin-bottom: 50px;
   grid-gap: 30px;
-  border: 2px solid red;
 }
+
 .grid_activites_1{
-  grid-area: zone1;
-  justify-items: start;
-  object-fit: cover;
-  
+  grid-column: span 3;
 }
+
 .grid_activites_2{
-  grid-area: zone2;
-  justify-items: start;
-  object-fit: cover;
+  grid-column: 2;
+  grid-row: 1/2;
 }
 .grid_activites_3{
-  grid-area: zone3;
-  justify-items: end;
-  object-fit: cover;
+  grid-column: 2;
+  grid-row:2/3 ;
 }
 .grid_activites_4{
-  grid-area: zone4;
-  justify-items: start;
-  object-fit: cover;
+  grid-column: 3;
+  grid-row: 1/3;
 }
 .grid_activites_5{
-grid-area: zone5;
-justify-items: start;
-object-fit: cover;
+  grid-column: 4;
+  grid-row: 1/2;
 }
 .grid_activites_6{
- grid-area: zone6;
- justify-items: end;
- object-fit: cover;
-}
-
-
-
-/*FOOTER*/
-footer{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  background-color: #f1eeee;
+  grid-column: 4;
+  grid-row: 2/3;
 }
