--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -141,12 +141,17 @@ a.active {
   border: 1px solid;
 }
 
-
-
 /*SECTION*/
-.blocs{
+.blocs {
   display: flex;
- justify-content: space-between;
+  justify-content: space-between;
+}
+.title_hebergements{
+  margin: 0 0 20px 0;
+}
+.end_texte_hebergements{
+  font-size: small;
+  margin: 25px 0 0 0;
 }
 .nav_hebergements {
   display: flex;
@@ -155,7 +160,6 @@ a.active {
   border-radius: 25px;
   padding: 0 20px;
   width: 60%;
-  
 }
 .grid_container_hebergements {
   display: grid;
@@ -167,6 +171,7 @@ a.active {
   border: 0.5px solid white;
   border-radius: 20px;
   padding: 5px;
+  box-shadow: 0px 0px 15px 0px rgb(0 0 0 / 30%);
 }
 .texte_hebergements a {
   text-decoration: none;
@@ -226,37 +231,33 @@ a.active {
   border-radius: 25px;
   padding: 0 20px;
   width: 30%;
-  
 }
-.grid_container_populaires{
+.grid_container_populaires {
   display: flex;
   flex-direction: column;
   row-gap: 15px;
-  
-
 }
 .grid_populaires {
   display: flex;
   background-color: white;
   border-radius: 15px;
-  border: 5px solid white
+  border: 5px solid white;
+  box-shadow: 0px 0px 15px 0px rgb(0 0 0 / 30%);
 }
 
-.image_populaires img{
+.image_populaires img {
   display: flex;
   width: 200px;
   height: 130px;
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
   object-fit: cover;
- 
 }
 .texte_populaires a {
   text-decoration: none;
   color: black;
   width: 30%;
 }
-
 
 .grid_populaires h2 {
   font-size: small;
@@ -270,7 +271,7 @@ a.active {
   margin: 5px 0px 5px 0px;
 }
 .texte_populaires .rating {
-  padding:55px 5px 0 5px;
+  padding: 55px 5px 0 5px;
   margin: 0;
 }
 
@@ -290,40 +291,120 @@ a.active {
 
 /*section activites*/
 
-.activites{
-  display: flex;
+.title_activites h2{
+  padding-left: 10px;
+  margin: 30px 0 30px  0;
 }
 .grid_container_activites {
-  position:relative;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, minmax(100px, 1fr));
-  height: 550px;
-  margin-bottom: 50px;
-  grid-gap: 30px;
+  width: 100%;
+  grid-template-columns: 0.3fr 0.3fr 0.3fr 0.3fr;
+  grid-template-rows: 5em 5em 2em 2em 5em 5em;
+  padding-right: 10px;
+  gap: 30px;
+}
+.grid_container_activites a{
+  text-decoration: none;
+  color: black;
 }
 
-.grid_activites_1{
-  grid-column: span 3;
+.grid_container_activites h3{
+  padding-left: 20px;
+}
+.box1{
+  box-shadow: 0px 0px 13px 0px rgb(0 0 0 / 25%);
+  border-radius: 20px;
+  grid-column: 1;
+  grid-row: 1 / 7;
+}
+.box1 img{
+  width: 100%;
+  height: 89%;
+  object-fit: cover;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 
-.grid_activites_2{
+.box2{
+  box-shadow: 0px 0px 13px 0px rgb(0 0 0 / 25%);
+  border-radius: 20px;
   grid-column: 2;
-  grid-row: 1/2;
+  grid-row: 1 / 5;
 }
-.grid_activites_3{
+.box2 img{
+  width: 100%;
+  height: 80%;
+  object-fit: cover;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+.box3{
+  box-shadow: 0px 0px 13px 0px rgb(0 0 0 / 25%);
+  border-radius: 20px;
   grid-column: 2;
-  grid-row:2/3 ;
+  grid-row: 5 / 7;
 }
-.grid_activites_4{
+.box3 img{
+  width: 100%;
+  height: 70%;
+  object-fit: cover;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+.box4{
+  box-shadow: 0px 0px 13px 0px rgb(0 0 0 / 25%);
+  border-radius: 20px;
   grid-column: 3;
-  grid-row: 1/3;
+  grid-row: 1 / 7;
 }
-.grid_activites_5{
-  grid-column: 4;
-  grid-row: 1/2;
+.box4 img{
+  width: 100%;
+  height: 89%;
+  object-fit: cover;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
-.grid_activites_6{
+.box5{
+  box-shadow: 0px 0px 13px 0px rgb(0 0 0 / 25%);
+  border-radius: 20px;
   grid-column: 4;
-  grid-row: 2/3;
+  grid-row: 1 / 3;
+}
+.box5 img{
+  width: 100%;
+  height: 65%;
+  object-fit: cover;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+.box6{
+  box-shadow: 0px 0px 13px 0px rgb(0 0 0 / 25%);
+  border-radius: 20px;
+  grid-column: 4;
+  grid-row: 3 / 7;
+}
+.box6 img{
+  width: 100%;
+  height: 81%;
+  object-fit: cover;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+/*FOOTER*/
+footer {
+  display: flex;
+  background-color: #faf1f1;
+  margin-top: 30px;
+ 
+}
+.a_propos{
+  padding-left: 10px;
+  margin: 0;
+}
+.nos_hébergements{
+  padding-left: 20%;
+}
+.assistance{
+  padding-left: 20%;
 }
