--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,7 +11,7 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  height: 100px;
+  height: 50px;
 }
 .menu li {
   display: inline;
@@ -19,7 +19,7 @@ body {
 }
 .menu li a {
   text-decoration: none;
-  padding: 35px 10px 0px 10px;
+  padding: 30px 0px 0px 30px;
 }
 li {
   list-style-type: none;
@@ -110,7 +110,7 @@ a.active {
   border-radius: 60px;
 }
 .filtre i {
-  border: 12px solid #deebff;
+  border: 12px solid  #deebff;
   background-color: #deebff;
   color: #0065fc;
 }
@@ -146,10 +146,10 @@ a.active {
   display: flex;
   justify-content: space-between;
 }
-.title_hebergements{
+.title_hebergements {
   margin: 0 0 20px 0;
 }
-.end_texte_hebergements{
+.end_texte_hebergements {
   font-size: small;
   margin: 25px 0 0 0;
 }
@@ -158,7 +158,7 @@ a.active {
   flex-direction: column;
   background-color: #e2e0e0;
   border-radius: 25px;
-  padding: 0 20px;
+  padding: 0 30px;
   width: 60%;
 }
 .grid_container_hebergements {
@@ -222,20 +222,23 @@ a.active {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 20px 0 20px;
 }
 .nav_populaires {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 0.1fr 1fr;
-  background-color: #e2e0e0;
-  border-radius: 25px;
-  padding: 0 20px;
-  width: 30%;
-}
-.grid_container_populaires {
   display: flex;
   flex-direction: column;
+  background-color: #e2e0e0;
+  border-radius: 25px;
   row-gap: 15px;
+  width: 30%;
+  
+}
+.grid_container_populaires {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 8em 8em 8em;
+  padding: 0 30px;
+  gap: 30px;
 }
 .grid_populaires {
   display: flex;
@@ -247,8 +250,8 @@ a.active {
 
 .image_populaires img {
   display: flex;
-  width: 200px;
-  height: 130px;
+  width: 150px;
+  height: 100%;
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
   object-fit: cover;
@@ -262,16 +265,15 @@ a.active {
 .grid_populaires h2 {
   font-size: small;
   margin: 5px 0px 5px 0px;
-  padding-left: 5px;
+  padding-left: 20px;
 }
 
 .grid_populaires p {
   font-size: x-small;
-  padding-left: 5px;
-  margin: 5px 0px 5px 0px;
+  margin: 5px 0px 5px 20px;
 }
 .texte_populaires .rating {
-  padding: 55px 5px 0 5px;
+  padding: 45px 5px 0 20px;
   margin: 0;
 }
 
@@ -291,9 +293,9 @@ a.active {
 
 /*section activites*/
 
-.title_activites h2{
+.title_activites h2 {
   padding-left: 10px;
-  margin: 30px 0 30px  0;
+  margin: 30px 0 30px 0;
 }
 .grid_container_activites {
   display: grid;
@@ -303,21 +305,21 @@ a.active {
   padding-right: 10px;
   gap: 30px;
 }
-.grid_container_activites a{
+.grid_container_activites a {
   text-decoration: none;
   color: black;
 }
 
-.grid_container_activites h3{
+.grid_container_activites h3 {
   padding-left: 20px;
 }
-.box1{
+.box1 {
   box-shadow: 0px 0px 13px 0px rgb(0 0 0 / 25%);
   border-radius: 20px;
   grid-column: 1;
   grid-row: 1 / 7;
 }
-.box1 img{
+.box1 img {
   width: 100%;
   height: 89%;
   object-fit: cover;
@@ -325,65 +327,65 @@ a.active {
   border-top-right-radius: 20px;
 }
 
-.box2{
+.box2 {
   box-shadow: 0px 0px 13px 0px rgb(0 0 0 / 25%);
   border-radius: 20px;
   grid-column: 2;
   grid-row: 1 / 5;
 }
-.box2 img{
+.box2 img {
   width: 100%;
   height: 80%;
   object-fit: cover;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
-.box3{
+.box3 {
   box-shadow: 0px 0px 13px 0px rgb(0 0 0 / 25%);
   border-radius: 20px;
   grid-column: 2;
   grid-row: 5 / 7;
 }
-.box3 img{
+.box3 img {
   width: 100%;
   height: 70%;
   object-fit: cover;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
-.box4{
+.box4 {
   box-shadow: 0px 0px 13px 0px rgb(0 0 0 / 25%);
   border-radius: 20px;
   grid-column: 3;
   grid-row: 1 / 7;
 }
-.box4 img{
+.box4 img {
   width: 100%;
   height: 89%;
   object-fit: cover;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
-.box5{
+.box5 {
   box-shadow: 0px 0px 13px 0px rgb(0 0 0 / 25%);
   border-radius: 20px;
   grid-column: 4;
   grid-row: 1 / 3;
 }
-.box5 img{
+.box5 img {
   width: 100%;
   height: 65%;
   object-fit: cover;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
-.box6{
+.box6 {
   box-shadow: 0px 0px 13px 0px rgb(0 0 0 / 25%);
   border-radius: 20px;
   grid-column: 4;
   grid-row: 3 / 7;
 }
-.box6 img{
+.box6 img {
   width: 100%;
   height: 81%;
   object-fit: cover;
@@ -396,15 +398,14 @@ footer {
   display: flex;
   background-color: #faf1f1;
   margin-top: 30px;
- 
 }
-.a_propos{
+.a_propos {
   padding-left: 10px;
   margin: 0;
 }
-.nos_hébergements{
+.nos_hébergements {
   padding-left: 20%;
 }
-.assistance{
+.assistance {
   padding-left: 20%;
 }
