--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -407,6 +407,10 @@ main {
   background-color: #faf1f1;
   margin-top: 50px;
 }
+.footer_desktop a {
+  text-decoration: none;
+  color: black;
+}
 .a_propos_desktop {
   padding-left: 30px;
   margin: 0;
@@ -439,7 +443,11 @@ main {
 .nav_populaires_mobil {
   display: none;
 }
+
+
 /*MEDIA QUERIES*/
+
+/*MOBILE*/
 
 @media only screen and (max-width: 600px) {
   .navbar_ordi {
@@ -501,7 +509,7 @@ main {
     font-size: small;
     margin-left: -10px;
   }
-  main{
+  main {
     padding: 0;
   }
   .navlist {
@@ -658,11 +666,16 @@ main {
   .texte_activites_tab {
     display: none;
   }
+ 
   .footer_mobil {
     display: block;
     background-color: #d8d8dd;
     margin: 0;
     padding: 20px 0 20px 30px;
+  }
+  .footer_mobil a {
+    text-decoration: none;
+    color: black;
   }
   .a_propos_mobil {
     padding: 0 0 30px 0;
@@ -689,6 +702,8 @@ main {
     display: none;
   }
 }
+/* TABLETTE*/
+
 
 @media only screen and (max-width: 1080px) {
   .list-filtre {
@@ -749,7 +764,14 @@ main {
     grid-template-columns: 1fr 1fr 1fr;
     gap: 70px;
   }
+  .footer_tab a {
+    text-decoration: none;
+    color: black;
+  }
   .footer_desktop {
     display: none;
+  }
+  .a_propos_tab{
+    margin-left: 20px;
   }
 }
